# stm32_cubemx_l3g4200d

app/: CMakeLists.txt
app/l3g4200d/: CMakeLists.txt  l3g4200d.c  l3g4200d.h  l3g4200d_config.h  l3g4200d_registers.h
